[tool.poetry]
name = "tardigrade-http"
version = "0.1.5"
description = "Small footprint SimpleHTTPServer implementation with nice logging and POST requests processing, meant for development work and simple testing"
authors = ["Javier Darkona <javier.darkona@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Darkona/Tardigrade"
repository = "https://github.com/Darkona/Tardigrade"
keywords = ["postman", "http", "logging", "devtool"]
packages = [
    {include = "tardigrade"}
]
include = [
    { path = "LICENSE", format = ["sdist", "wheel"] },
    { path = "output/*.*", format = ["sdist", "wheel"] },
    { path = "input/*.*", format = ["sdist", "wheel"]},
    { path = "postman/*.*", format = "sdist" },
    { path = "config/config.yaml", format = ["sdist", "wheel"] }
]


[tool.poetry.dependencies]
python = "^3.11"
simplejson = "^3.19.1"
psutil = "^6.0.0"
PyYAML = "^6.0"
tomli = "^2.0.1"
importlib-metadata = "^8.2.0"


[tool.poetry.scripts]
tardigrade = "tardigrade.__main__:run"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
